--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -7,12 +7,24 @@
     box-sizing:border-box;
     -webkit-font-smoothing: antialiased;
     border-radius: 15px;
-    height: 30px;
-    padding: 6px 24px;
+    height: 36px;
+    padding: 0px 24px;
     text-align: center;
     border: 1px solid;
     cursor: pointer;
     outline: none;
+}
+
+.button>.inner {
+    display: flex;
+    width:100%;
+    height:100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.button>div, .button>.inner>div {
+    color: inherit;
 }
 
 .button.disabled
