Still some layout fixes for checkbox

--- a/src/Checkbox/Checkbox.less
+++ b/src/Checkbox/Checkbox.less
@@ -1,5 +1,9 @@
 @import (reference) '../common.less';
 
+.wrapper {
+    display: inline-block;
+}
+
 .wrapper > label {
     display: flex;
     cursor: pointer;
